src/test/deca/context/valid/declare-int.deca
// Description:
//    Declare un entier 
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    int i = 2;
}